# gpkg

./: .clang-format  .gitignore  CMakeLists.txt  README.md  notes.md
cmake/: Doctest.cmake  FindSQLite3.cmake
include/: gpkg.hpp  sqlite.hpp
include/gpkg/: feature.hpp
include/sqlite/: sqlite_iter.hpp
scripts/: get_testdata.sh
tests/: CMakeLists.txt  gpkg_test.cpp  main.cpp  sqlite_test.cpp  utils.hpp
tests/data/: CMakeLists.txt
